# nanotoms

./: .gitattributes  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  api.py  cli.py  docker-compose.yml  gui.py  logging.conf  pyproject.toml  settings.py  setup.cfg  streamlit_app.py
data/0_external/: README.md
data/0_raw/: README.md  data.csv
data/1_interim/: README.md
data/2_final/: README.md
data/2_final/embeddings/: config  embeddings
data/gpt-neo-125M-nanotoms/: README.md  config.json
nanotoms/: __init__.py  api.py  data.py  etl.py  features.py  generate.py  search.py  train.py  visualize.py
notebooks/: gpt_neo.ipynb
scripts/: api.sh  docker.sh
