[tool.poetry]
name = "nanotoms"
version = "0.1.0"
description = ""
authors = ["Miguel Vieira <jmvieira@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10"
gensim = "^4"
pandas = "^1.3.5"
requests = "^2.26"
spacy = "^3.2"
tqdm = "^4.62"
typer = "^0.4"
urlextract = "^1.4"
streamlit = "^1.3.1"
#top2vec = "https://github.com/ddangelov/Top2Vec"
#hdbscan = "https://github.com/scikit-learn-contrib/hdbscan"
watchdog = "^2.1.6"
pyLDAvis = "^3.3.1"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
ipython = "*"
isort = "*"
pytest= "*"
flake8 = "^4.0.1"

[tool.flake8]
max-line-length = 88
exclude = ".tox,.git,*/migrations/*,*/static/CACHE/*,docs,edtf,node_modules"

[tool.pycodestyle]
max-line-length = 88
exclude = ".tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
